add auth, invitations, UI improvements